raised pixel density requirement to avoid surface pro broswers, increased width px requirement to avoid overflowing nav

--- a/etcbc/css/main.css
+++ b/etcbc/css/main.css
@@ -330,9 +330,9 @@ p {
   }
 }
 
-@media screen and (max-width: 740px),
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
+@media screen and (max-width: 780px),
+only screen and (-webkit-min-device-pixel-ratio : 2),
+only screen and (min-device-pixel-ratio : 2) {
 
   h2 {
     margin-left: 4%;
@@ -397,8 +397,8 @@ only screen and (min-device-pixel-ratio : 1.5) {
 }
 
 @media 
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
+only screen and (-webkit-min-device-pixel-ratio : 2),
+only screen and (min-device-pixel-ratio : 2) {
   
   body {
     font-size: 3.5em;
